# numerical_analysis

./: .gitignore  README.md  pyproject.toml  sandwich.py
.github/workflows/: test-simple.yml  test.yml
sandwich_numerical/: sandwich.py
sandwich_numerical/solver/: laplace.py  mesh_block.py  mesh_utils.py
tests/: test_mesh_block.py  test_sandwich.py
